<resources>
    <string name="app_name">VeriMobile</string>
    <string name="vericoin_desc">The Extremely Fast, Secure and Scalable Digital Currency That Pays You Interest.</string>
    <string name="verium_desc">The World’s First CPU Mineable Digital Commodity.</string>
    <string name="vericoin_benefits">
\u2022 Earn Interest By Staking Your VeriCoin \n
\u2022 Lightning Fast Transactions. \n
\u2022 Confirmations In Less Than 5 Seconds \n
\u2022 Near-Zero Transaction Costs. (Only .0001 VRC) \n
\u2022 Exponentially More Secure Than Traditional POS \n
\u2022 Energy Efficient Network Consensus</string>
    <string name="verium_benefits">
\u2022 Mine With Your CPU \n
\u2022 ASIC and GPU Resistant Means True Decentralization \n
\u2022 Variable Blocktime That Increases As Mining Power Increases \n
</string>
    <string name="binary_desc">
    The Binary Chain - Proof of Work + Proof of Stake - Paired By Design
</string>
    <string name="change_password_button">changePassword</string>
    <string name="export_wallet_button">exportWallet</string>
    <string name="view_seed_button">viewSeed</string>
    <string name="delete_wallet_button">deleteWallet</string>
    <string name="lock_transactions_key">lockTransactions</string>
    <string name="fingerprint_enabled_key">enableFingerprint</string>
    <string name="secure_window_key">secureWindow</string>
    <string name="secure_category">Security</string>
    <string name="password_is_incorrect">Password is incorrect</string>
    <string name="password_updated">Password updated!</string>
    <string name="invalid_input">Invalid input</string>
    <string name="no_peers_connected">No peers connected yet</string>
    <string name="no_transactions">No transactions yet</string>
    <string name="creating_transaction">Creating transaction&#8230;</string>
    <string name="broadcasting_transaction">Broadcasting transaction&#8230;</string>
    <string name="broadcast_complete">Broadcast complete!</string>
    <string name="broadcast_failed">Broadcast failed!</string>
    <string name="invalid_address">This is not a valid address</string>
    <string name="wallet_saved">Wallet saved!</string>
    <string name="wallet_imported">Wallet has been imported!</string>
    <string name="import_button">Import</string>
    <string name="N_A">N/A</string>
    <string name="seed_copied">Seed copied to clipboard</string>
    <string name="time_created_copied">Time created copied to clipboard</string>
    <string name="touch_sensor">Touch Sensor</string>
    <string name="authentication_success">Authentication Success!</string>
    <string name="authentication_failed">Authentication Failed</string>
    <string name="cancel_button">Cancel</string>
    <string name="password_required">Password Required</string>
    <string name="enter_button">Enter</string>
    <string name="building_tx">Building</string>
    <string name="pending_tx">Pending</string>
    <string name="dead_tx">Dead</string>
    <string name="unknown_tx">Unknown</string>
    <string name="conflict_tx">In Conflict</string>
    <string name="next_button">Next</string>
    <string name="current_password_hint">Current Password</string>
    <string name="new_password_hint">New Password</string>
    <string name="retype_new_password_hint">Retype Password</string>
    <string name="password_hint">Password</string>
    <string name="update_password_button">Update Password</string>
    <string name="no_password_checkBox">No Password</string>
    <string name="change_password">Change Password</string>
    <string name="encrypt_wallet_checkBox">Encrypt Wallet</string>
    <string name="encrypt_wallet_desc">If you encrypt your wallet, you will have to type your password every time you send a transaction.</string>
    <string name="create_wallet_button">Create</string>
    <string name="create_new_wallet_text">Create New Wallet</string>
    <string name="decrypt_wallet_text">Decrypt Wallet</string>
    <string name="deleting_wallet_text">Deleting Wallet&#8230;</string>
    <string name="import_seed_text">Import Seed</string>
    <string name="seed_hint">Seed</string>
    <string name="creation_time_hint">Creation Time</string>
    <string name="seed_desc">Creation time is not required to restore wallet. It helps speed up syncing process.</string>
    <string name="send_button">Send</string>
    <string name="receive_button">Receive</string>
    <string name="available_balance_text">Available Balance</string>
    <string name="unconfirmed_balance_text">Unconfirmed Balance</string>
    <string name="blockchain_text">Blockchain</string>
    <string name="block_height_text">Block Height</string>
    <string name="syncing_text">Syncing&#8230;</string>
    <string name="recent_transactions_text">Recent Transactions</string>
    <string name="view_more_button">View More</string>
    <string name="tx_hash_text">TX Hash: </string>
    <string name="done_button">Done</string>
    <string name="recipient_address">Enter recipients public address</string>
    <string name="scan_button">Scan</string>
    <string name="set_up_wallet_text">Set Up Wallet</string>
    <string name="access_wallet_text">Access Wallet</string>
    <string name="access_wallet_desc">Your wallet is encrypted. Please enter the password to access wallet. The app will also be set to this password.</string>
    <string name="starting_wallet_text">Starting Wallet&#8230;</string>
    <string name="outputs_text">Outputs</string>
    <string name="inputs_text">Inputs</string>
    <string name="fee_text">Fee</string>
    <string name="confirmations_text">Confirmations</string>
    <string name="amount_text">Amount</string>
    <string name="total_text">Total</string>
    <string name="unlock_wallet_text">Unlock Wallet</string>
    <string name="unlock_wallet_button">Unlock</string>
    <string name="time_created_text">Time Created</string>
    <string name="seed_text">Seed</string>
    <string name="wallet_seed_text">Wallet Seed</string>
    <string name="import_wallet_text">Import Wallet</string>
    <string name="get_started_button">Get Started</string>
    <string name="vericonomy_desc">The only integrated digital currency + digital reserve ecosystem based on the Binary-Chain protocol.</string>
    <string name="finger_print_desc">Confirm fingerprint to continue</string>
    <string name="touch_sensor_text">Touch Sensor</string>
    <string name="protocol_text">Protocol</string>
    <string name="address_text">Address</string>
    <string name="settings_button">Settings</string>
    <string name="transaction_history_label">Transaction History</string>
    <string name="recipient_label">Choose Recipient</string>
    <string name="send_amount_label">Send Amount</string>
    <string name="review_label">Review and Send</string>
    <string name="receive_label">Receive Address</string>
    <string name="transaction_details_label">Transaction Details</string>
    <string name="settings_label">Settings</string>
    <string name="connected_peers_label">Connected Peers</string>
    <string name="decrypting_seed_text">Decrypting Seed&#8230;</string>
    <string name="edit_peers_button">Modify Peers</string>
    <string name="host_name_text">Host\'s Name</string>
    <string name="add_peer_button">Add Peer</string>
    <string name="edit_peers_desc">You can add custom peers to connect to exclusively. Restart app for changes to take place.</string>
    <string name="connected_peers_tip">You are not connected to your custom peers. You may want to check your connection or remove your custom peers to allow connections to all peers.</string>
    <string name="custom_peers_title">Custom Peers</string>
    <string name="add_peer_label">Add Peer</string>
    <string name="remove_button">Remove</string>
    <string name="remove_peer_title">Remove Peer</string>
    <string name="security_key">securityKey</string>
    <string name="insufficient_funds">Wallet does not have enough funds</string>
    <string name="add_contact_title">Add New Contact</string>
    <string name="contact_hint">Contact\'s Name</string>
    <string name="address_hint">Address</string>
    <string name="add_contact_button">Add Contact</string>
    <string name="edit_contact_title">Modify Contact</string>
    <string name="save_contact_button">Save Contact</string>
    <string name="view_contacts_key">viewContacts</string>
    <string name="view_contacts_button">View Contacts</string>
    <string name="contact_list_label">Contact List</string>
    <string name="no_contacts">No contacts</string>
    <string name="contact_added">New contact added!</string>
    <string name="contact_updated">Contact updated!</string>
    <string name="delete_button">Delete</string>
    <string name="delete_contact">Delete Contact</string>
    <string name="delete_contact_msg">Are you sure you want to delete this contact?</string>
    <string-array name="contact_options">
        <item>Edit</item>
        <item>Send</item>
    </string-array>
    <string name="wallet_is_encrypted">Your wallet is encrypted with your current password.</string>
    <string name="wallet_is_not_encrypted">Your wallet is not encrypted!</string>
    <string name="swap_currency">Swap Currency</string>
    <string name="currencyTitle">Currency</string>
    <string name="fiatType">Fiat Type</string>
    <string name="refreshButton">Refresh</string>
    <string name="default_fiat_value">usd</string>
    <string name="refreshing_exchange_rate">Refreshing Exchange Rate</string>
    <string name="provided_by_coin_gecko">Powered by CoinGecko API</string>
    <string name="payment_channel_name">Payments</string>
    <string name="payment_channel_desc">Be notified when payment is received</string>
    <string name="notification_payment_title">Incoming Payment</string>
    <string name="received_text">Received</string>
    <string name="pref_category_more">More Information</string>
    <string name="pref_about">About Vericoin &amp; Verium</string>
    <string name="pref_wallet_title">Wallet</string>
    <string name="pref_export_wallet_title">Export Wallet</string>
    <string name="pref_view_seed_title">View Seed</string>
    <string name="pref_delete_wallet_title">Delete Wallet</string>
    <string name="pref_secure_window_title">Secure Window</string>
    <string name="pref_secure_window_summary">Prevents device from taking screenshots of app, and hides content when minimized.</string>
    <string name="pref_finger_print_title">Fingerprint Unlocking</string>
    <string name="pref_finger_print_summary">Allow fingerprint to unlock wallet instead of using password</string>
    <string name="pref_lock_transaction_title">Lock Transactions</string>
    <string name="pref_lock_transaction_summary">Require wallet to be unlocked before sending transactions. If wallet is encrypted then password is required to send transactions.</string>
    <string name="pref_change_password_title">Change Password</string>
    <string name="dusty_send_request_err">Send amount is too small</string>
    <string name="confirm_send_title">Confirm Payment</string>
    <string name="to_address">To</string>
    <string name="wallet_safety_tip">VeriMobile is a Simplified Payment Verification wallet. What that means is that this device has full and exclusive access to the coins stored on this wallet. We recommend you encrypt this wallet in case your device is compromised. We also recommend that you only store a small portion of your coins on this wallet. Please keep a backup of your wallet or seed somewhere secured. You can not recover your coins without access to your wallet or seed.</string>
    <string name="i_have_read_text">I have read and understand</string>
    <string name="quick_tip">Quick Tip</string>
    <string name="show_fiat_menu">Show Fiat</string>
    <string name="language_category">Language</string>
    <string name="default_language_value">english</string>
    <string name="switch_coin_button">Switch Coin</string>
</resources>