<PreferenceScreen
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:key="preference_screen">

    <PreferenceCategory android:title="@string/secure_category"
        android:key="@string/security_key">

        <Preference
            android:key="@string/change_password_button"
            android:title="Change Password" />
        <CheckBoxPreference
            android:key="@string/lock_transactions_key"
            android:summary="Require wallet to be unlocked before sending transactions. If wallet is encrypted then password is required to send transactions."
            android:title="Lock Transactions" />
        <CheckBoxPreference
            android:key="@string/fingerprint_enabled_key"
            android:summary="Allow fingerprint to unlock wallet instead of using password"
            android:title="Fingerprint Unlocking"
            android:defaultValue="true"/>
        <CheckBoxPreference
            android:key="@string/secure_window_key"
            android:summary="Prevents device from taking screenshots of app, and hides content when minimized."
            android:title="Secure Window"
            android:defaultValue="true"/>
    </PreferenceCategory>

    <PreferenceCategory android:title="Wallet"
        android:key="wallet">
        <Preference
            android:key="@string/export_wallet_button"
            android:title="Export Wallet" />
        <Preference
            android:key="@string/view_seed_button"
            android:title="View Seed" />
        <Preference
            android:key="@string/delete_wallet_button"
            android:title="Delete Wallet" />
    </PreferenceCategory>

</PreferenceScreen>